--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/selena?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/selena?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/zing?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=dungbadao2002
+spring.datasource.password=Hieuvathuan1
+#spring.datasource.password=dungbadao2002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
